--- a/config/database.yml
+++ b/config/database.yml
@@ -13,13 +13,11 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
   socket: /tmp/mysql.sock
 
 development:
   <<: *default
-  database: nida
+  database: nidalibrary
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
